# RCSSServerMJ

./: .gitignore  .gitlab-ci.yml  .gitlab.-ci.yml  AUTHORS.md  LICENSE  README.md  build-requirements.txt  doc-requirements.txt  locomotion_nn.pth  mujoco_client.py  nn_client.py  pyproject.toml  requirements.txt  start_team.sh  update_from_upstream.sh
doc/source/: conf.py  index.rst
doc/source/dev/: gitlab.rst  index.rst
doc/source/examples/: example_client.rst  index.rst  learning_example.rst  nn_client.rst
doc/source/reference/: index.rst  structure.rst
doc/source/user/: about.rst  agent_protocol.rst  index.rst  installation.rst  managed_simulation.rst  monitor_protocol.rst  running_a_simulation.rst  simulation_server.rst  soccer_simulation.rst
doc/source/user/robots/: K1.rst  T1.rst  ant.rst  index.rst
example/client/: mujoco_client.py
example/nn_client/: nn_client.py
src/rcsssmj/: __init__.py  __main__.py  agent.py  agents.py  mjutils.py  server.py  sim_agent.py  sim_object.py  sim_server.py  simulation.py  simulation_interfaces.py
src/rcsssmj/agent/: action.py  encoder.py  parser.py  remote_agent.py  sim_agent.py
src/rcsssmj/client/: action.py  encoder.py  parser.py  perception.py  sim_client.py  tcp_client.py
src/rcsssmj/communication/: connection.py  tcp_lpm_connection.py
src/rcsssmj/game/: field.py  game.py  game_object.py  game_state.py  referee.py  rules.py  simulation.py  soccer.py  soccer_sim_interfaces.py
src/rcsssmj/games/: game.py  teams.py
src/rcsssmj/games/soccer/: field.py  game.py  game_object.py  game_state.py  play_mode.py  referee.py  rules.py  soccer_agent.py  soccer_ball.py  soccer_rules.py  soccer_server.py  soccer_sim.py  soccer_sim_interfaces.py
src/rcsssmj/games/soccer/agent/: action.py  parser.py  perception.py
src/rcsssmj/games/soccer/client/: action.py  parser.py  perception.py
src/rcsssmj/games/soccer/monitor/: command.py  parser.py  state.py
src/rcsssmj/games/soccer/server/: soccer_action_parser.py  soccer_command_parser.py  soccer_server.py
src/rcsssmj/games/soccer/sim/: soccer_actions.py  soccer_agent.py  soccer_ball.py  soccer_commands.py  soccer_game.py  soccer_game_state.py  soccer_perceptions.py  soccer_referee.py  soccer_sim.py  soccer_sim_interfaces.py  soccer_state_info.py
src/rcsssmj/monitor/: commands.py  monitor_client.py  mujoco_monitor.py  parser.py  sim_monitor.py  state.py
src/rcsssmj/resources/: spec_provider.py
src/rcsssmj/resources/environments/soccer/: world.xml
src/rcsssmj/resources/robots/: README.md
src/rcsssmj/resources/robots/K1/: robot.xml
src/rcsssmj/resources/robots/T1/: robot.xml
src/rcsssmj/resources/robots/ant/: robot.xml
src/rcsssmj/server/: action_parser.py  command_parser.py  perception_encoder.py  remote_agent.py  remote_monitor.py  server.py
src/rcsssmj/server/communication/: tcp_lpm_connection.py
src/rcsssmj/sim/: actions.py  agent_id.py  agent_params.py  commands.py  sim_agent.py  sim_object.py  simulation.py
src/rcsssmj/utils/: error.py  geometry.py  mjutils.py  sexpression.py
