[build-system]
requires = [
  # NOTE: this needs to be kept in sync with build-requirements.txt and requirements.txt
  # build-requirements.txt
  "hatchling",
  # requirements.txt
  "numpy",
  "mujoco==3.4.0"
]
build-backend = "hatchling.build"

[project]
name = "rcsssmj"
description = "MuJoCo based RoboCup Soccer Simulation Server"
keywords = ["RoboCup", "Humanoid", "Robot", "Soccer", "Simulation", "Competition", "Machine Learning", "AI", "MuJoCo"]
readme = "README.md"
authors = [
    {name = "Stefan Glaser", email = "glaser.stefan@gmx.net"},
    {name = "Nico Bohlinger", email = "nico.bohlinger@gmail.com"},
    {name = "Hannes Braun", email = "hannes@hannesbraun.net"}
]
maintainers = [
    {name = "Stefan Glaser", email = "glaser.stefan@gmx.net"}
]
license = "MIT"
license-files = ["LICENSE", "src/rcsssmj/resources/robots/*/LICENSE", "AUTHORS.md"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development",
  "Typing :: Typed",
]
requires-python = ">= 3.10"
dependencies = [
  # When changing this, also update build-system.requires and requirements.txt
  "numpy",
  "mujoco==3.4.0"
]
dynamic = ["version"]

[project.optional-dependencies]
ogl = [
  "PyOpenGL",
]

[project.urls]
Homepage = "https://gitlab.com/robocup-sim/rcssservermj"
Documentation = "https://robocup-sim.gitlab.io/rcssservermj/"
Repository = "https://gitlab.com/robocup-sim/rcssservermj/-/tree/master"
Issues = "https://gitlab.com/robocup-sim/rcssservermj/-/issues"

[project.scripts]
rcssservermj = "rcsssmj.__main__:soccer_sim"

[tool.ruff]
line-length = 240
exclude = ["doc", "example"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
extend-ignore = [
  "ARG002",  # unused-method-argument
  "PLR2004", # magic-value-comparison
  "S311"     # suspicious-non-cryptographic-random-usage
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "mujoco.*",
  "glfw.*",
  "OpenGL.*"
]
ignore_missing_imports = true

[tool.hatch.build]
exclude = [
  "/.*",          # hidden directories (caches, IDE settings, etc.)
  "/analysis",    # scripts for internal API and performance analysis
  "/docker",      # the docker files for the GitLab CI/CD runners
  "/example",     # TODO: include examples once they are properly organized
  "/tests"        # TODO: include tests once there are any
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0"
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/rcsssmj tests}"

[tool.hatch.envs.doc]
extra-dependencies = [
  "sphinx",
  "pydata-sphinx-theme"
]

[tool.hatch.envs.doc.scripts]
html = "sphinx-build -M html doc/source doc/build"
clean = "sphinx-build -M clean doc/source doc/build"

[tool.hatch.envs.test]
extra-dependencies = [
  "pytest"
]

[tool.hatch.version]
path = "src/rcsssmj/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rcsssmj"]
